--- a/core/templates/pdf/medical_report.html
+++ b/core/templates/pdf/medical_report.html
@@ -29,7 +29,7 @@
       margin-top: 6px;
       font-size: 11px;
     }
-    th, td { border: 1px solid #000; padding: 4px; text-align: left; }
+    th, td { border: 1px solid #000; padding: 4px; text-align: left; vertical-align: top; }
     th { background: #f0f0f0; }
     td.num { text-align: right; }
     ul { margin: 3px 0; padding-left: 18px; }
@@ -116,8 +116,7 @@
       <thead>
         <tr>
           <th>Medicamento</th>
-          <th>Dosis</th>
-          <th>Unidad</th>
+          <th>Composición (Sustancia + Dosis + Unidad)</th>
           <th>Vía</th>
           <th>Frecuencia</th>
           <th>Duración</th>
@@ -127,14 +126,21 @@
         {% for p in prescriptions %}
         <tr>
           <td>{{ p.medication }}</td>
-          <td class="num">{{ p.dosage }}</td>
-          <td>{{ p.unit }}</td>
+          <td>
+            {% if p.components %}
+              {% for c in p.components %}
+                {{ c.substance }} {{ c.dosage }} {{ c.unit }}<br>
+              {% endfor %}
+            {% else %}
+              <span class="empty">Sin componentes</span>
+            {% endif %}
+          </td>
           <td>{{ p.route }}</td>
           <td>{{ p.frequency }}</td>
           <td>{{ p.duration }}</td>
         </tr>
         {% empty %}
-        <tr><td colspan="6" class="empty">Sin prescripciones</td></tr>
+        <tr><td colspan="5" class="empty">Sin prescripciones</td></tr>
         {% endfor %}
       </tbody>
     </table>
